<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Lawyer Archives</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="welcome_user">خوش آمدید، %s</string>
    <string name="welcome_guest">خوش آمدید</string>
    <string name="nav_user_default">کاربر مهمان</string>
    <string name="dashboard_title">داشبورد وکیل</string>
    <string name="priority_high">بالا</string>
    <string name="priority_medium">متوسط</string>
    <string name="priority_low">کم</string>
    <string name="task_added_successfully">وظیفه با موفقیت اضافه شد</string>
    <string name="error_saving_task">خطا در ذخیره وظیفه</string>
    <string name="no_cases_yet">هنوز پرونده‌ای ثبت نشده است.</string>
    <string name="delete_case_title">حذف پرونده</string>
    <string name="delete_case_message">آیا از حذف پرونده «%s» اطمینان دارید؟</string>
    <string name="yes">بله</string>
    <string name="no">خیر</string>
    <string name="case_deleted_successfully">پرونده با موفقیت حذف شد.</string>
    <string name="no_court_sessions_yet">هنوز جلسه دادگاهی ثبت نشده است.</string>
    <string name="delete_session_title">حذف جلسه دادگاه</string>
    <string name="confirm_delete_session_message">آیااز حذف جلسه دادگاهدر تاریخ اطمینان دارید؟</string>
    <string name="session_deleted_successfully">جلسه دادگاه با موفقیت حذف شد.</string>
    <string name="date_format_text">تاریخ: %s</string>
    <string name="time_format_text">زمان: %s</string>
    <string name="task_due_date_format">مهلت: %s</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_clients">Clients</string>
    <string name="menu_cases">Cases</string>
    <string name="menu_meetings">Meetings</string>
    <string name="menu_court_sessions">Court Sessions</string>
    <string name="menu_tasks">Daily Tasks</string>
    <string name="menu_documents">Documents</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_backup">Backup</string>
    <string name="menu_reminder">Reminder</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_logout">Logout</string>
    <string name="menu_subtitle">Other</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="extra_case_id">CASE_ID</string>
    <string name="extra_case_title">CASE_TITLE</string>
    <string name="extra_daily_task_id">DAILY_TASK_ID</string>
    <string name="date_format">yyyy/MM/dd</string>
    <string name="time_format">HH:mm</string>

    <string name="menu_gavel_book">Gavel Book</string>
    <string name="menu_comment_gavel">Comment Gavel</string>
    <string name="menu_scale_book">Scale Book</string>
    <string name="menu_bank_book">Bank Book</string>
    <string name="menu_question_mark_document">Question Mark Document</string>
    <string name="menu_map_gavel">Map Gavel</string>
    <string name="menu_registration_services">Registration Services</string>
    <string name="menu_link">Link</string>
    <string name="menu_info">Info</string>
    <string name="menu_contact">Contact</string>
    <string name="add_new_case_description">Add new case</string>
    <string name="desc_image">Add new item</string>

    <string name="error_loading_task">خطا در بارگذاری وظیفه.</string>
    <string name="task_updated_successfully">وظیفه با موفقیت بروزرسانی شد.</string>
    <string name="error_updating_task">خطا در بروزرسانی وظیفه.</string>
    <string name="task_deleted_successfully">وظیفه با موفقیت حذف شد.</string>
    <string name="error_deleting_task">خطا در حذف وظیفه.</string>
    <string name="fill_all_fields">لطفا همه فیلدها را پر کنید.</string>
    <string name="task_not_found">وظیفه یافت نشد</string>
    <string name="edit_daily_task_title">ویرایش وظیفه روزانه</string>
    <string name="select_date">انتخاب تاریخ</string>
    <string name="select_time">انتخاب زمان</string>

    <string-array name="task_type_array">
        <item>پیگیری پرونده</item>
        <item>جلسه کاری</item>
        <item>اداری</item>
        <item>شخصی</item>
        <item>نوع وظیفه ۱</item>
        <item>نوع وظیفه ۲</item>
		<item>ملاقات با موکل</item>
        <item>جلسه دادگاه</item>
        <item>پیگیری پرونده</item>
        <item>تماس تلفنی</item>
        <item>نوشتن لایحه</item>
        <item>سایر</item>
    </string-array>
</resources>